Error handling in historic result page

--- a/caas-app/src/main/resources/public/css/page.css
+++ b/caas-app/src/main/resources/public/css/page.css
@@ -10,8 +10,10 @@ body, #content {
     background-color: #fafafa;
 }
 
-noscript {
+.error_message, noscript {
     color: #f44;
+    margin: auto;
+    padding: 10px;
 }
 
 input {
