--- a/caas-app/src/main/resources/public/css/tests.css
+++ b/caas-app/src/main/resources/public/css/tests.css
@@ -8,16 +8,27 @@
     position: absolute;
     bottom: 15px;
     right: 15px;
-    line-height: 40px;
-    font-size: 35px;
     width: 50px;
     height: 50px;
-    padding: 5px;
+    margin: 0px;
+    padding: 0px;
     border-radius: 50%;
+}
+
+g * {
+    fill: white;
 }
 
 .floating_button:hover {
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
+}
+
+.floating_button:hover * {
+    fill: #43a047;
+    -transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .test.card {
