--- a/caas-app/src/main/resources/public/css/page.css
+++ b/caas-app/src/main/resources/public/css/page.css
@@ -95,6 +95,16 @@ li {
     content: url('/img/passed.svg');
 }
 
+td.passed {
+    background-color: #43a047;
+}
+td.failed {
+    background-color: #ff4444;
+}
+td.not_found {
+    background-color: #aaaaaa;
+}
+
 code, .code {
     word-break: break-all;
     word-wrap: break-word;
