--- a/caas-app/src/main/resources/public/css/table.css
+++ b/caas-app/src/main/resources/public/css/table.css
@@ -5,23 +5,23 @@
 table a {
     font-size: 12px;
     line-height: 16px;
-    color: rgba(0, 0, 0, 0.87);
+    color: black;
 }
 
 tr:hover td {
-    background-color: #cccccc;
+    background-color: #e0e0e0;
 }
 
 tr:hover td.not_found {
-    background-color: #888888;
+    background-color: #c3c3c3;
 }
 
 tr:hover > td.passed {
-    background-color: #215023;
+    background-color: #387838;
 }
 
 tr:hover > td.failed {
-    background-color: #bb1111;
+    background-color: #d63939;
 }
 
 .fixed-table-container {
@@ -63,7 +63,7 @@ tr:hover > td.failed {
 }
 
 .fixed-table-container tr:hover td:first-child {
-    background: #aaa;
+    background: #c3c3c3;
 }
 
 .fixed-table-container tr:last-child td {
