Added basic email sending code

--- a/caas-app/src/main/resources/public/css/server.css
+++ b/caas-app/src/main/resources/public/css/server.css
@@ -13,6 +13,11 @@
     justify-content: space-between;
 }
 
+#form_subscribe > div {
+    margin: 5px;
+    padding: 5px;
+}
+
 .input_subscribe {
     width: 250px;
 }
