--- a/caas-app/src/main/resources/public/css/page.css
+++ b/caas-app/src/main/resources/public/css/page.css
@@ -16,6 +16,15 @@ body, #content {
     padding: 10px;
 }
 
+.footnote:before {
+    content: '*';
+}
+
+.footnote {
+    font-size: 12px;
+    color: #666;
+}
+
 input {
     font-size: 0.9em;
     background: none;
