--- a/caas-app/src/main/resources/public/css/page.css
+++ b/caas-app/src/main/resources/public/css/page.css
@@ -151,7 +151,7 @@ footer {
     top: 0px;
     right: 0px;
     left: 0px;
-    background: #43a047;
+    background: #43a147;
     z-index: 200;
 }
 
@@ -159,12 +159,36 @@ footer {
     color: white;
 }
 
-#brand {
-    float: left;
-    margin: 0px;
-    margin-left: 20px;
+#brand * {
+    align-self: center;
 }
 
+#brand_img {
+    margin-right: 20px;
+}
+
+.card.error {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 600px;
+}
+
+#brand {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+    float: left;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    #brand_name {
+        display: none;
+    }
+}
 #nav_list_menu {
     float: right;
     display: -webkit-box;
@@ -186,7 +210,7 @@ footer {
 
 #nav_list_menu a:hover {
     background-color: #fafafa;
-    color: #43a047;
+    color: #43a147;
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
 }
@@ -230,7 +254,7 @@ footer {
     transform: translate(-10px, 0px) rotate(-45deg) translate(0px, 28px);
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 950px) {
 
     #nav_list_menu {
         display: block;
@@ -239,7 +263,7 @@ footer {
         clear: both;
         margin: 0px;
         padding: 0px;
-        background-color: #43a047;;
+        background-color: #43a147;
         color: #fafafa;
         width: 100%;
         transition: visibility 0s, opacity 0.3s ease-in-out;
