Switched to markdown for help

--- a/caas-app/src/main/resources/public/css/page.css
+++ b/caas-app/src/main/resources/public/css/page.css
@@ -116,6 +116,13 @@ td.not_found {
     background-color: #aaaaaa;
 }
 
+pre code {
+    display: block;
+}
+
+code {
+    white-space: pre;
+}
 code, .code {
     word-break: break-all;
     word-wrap: break-word;
