--- a/caas-app/src/main/resources/public/css/page.css
+++ b/caas-app/src/main/resources/public/css/page.css
@@ -188,11 +188,23 @@ footer {
     align-items: flex-end;
     justify-content: space-between;
     float: left;
-    padding: 5px;
-    margin-left: 10px;
+    padding: 5px 10px;
+    margin-left: 15px;
+}
+
+#brand:hover {
+    background: #56cc5a;
+    -webkit-transition: all 0.3s;
+    -transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 @media only screen and (max-width: 600px) {
+    #brand_img {
+        margin-right: 0;
+    }
     #brand_name {
         display: none;
     }
@@ -207,18 +219,20 @@ footer {
 }
 
 #nav_list_menu a {
-    padding: 15px;
-    margin: auto;
-    position: relative;
+    height: 80px;
+    line-height: 80px;
+    padding: 0px 15px;
+    margin: 0;
+    /*align-self: center;*/
     text-align: center;
+    /*vertical-align: middle;*/
     font-size: 1.3em;
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
 }
 
 #nav_list_menu a:hover {
-    background-color: #fafafa;
-    color: #43a147;
+    background: #56cc5a;
     -webkit-transition: all 300ms ease-in-out;
     transition: all 300ms ease-in-out;
 }
@@ -279,6 +293,8 @@ footer {
     }
 
     #nav_list_menu a {
+        height: 50px;
+        line-height: 50px;
         margin: 0px;
         top: 0px;
         padding: 10px 0px;
