--- a/caas-web/src/main/resources/public/css/table.css
+++ b/caas-web/src/main/resources/public/css/table.css
@@ -125,14 +125,8 @@ th, td {
     border-right: 0;
 }
 
-#cover_table_hack {
-    position: absolute;
-    top: 80px;
-    height: 8px;
+#nav_bar_space {
     z-index: 100;
-    width: 100%;
-    background-color: #fafafa;
-    display: block;
 }
 
 body {
