Revert "Navigation bar stays at top even on scrolling down"
This reverts commit 0d13eb00cdeb8d2cace190186b8a6adf195a8320.

--- a/caas-web/src/main/resources/public/css/table.css
+++ b/caas-web/src/main/resources/public/css/table.css
@@ -125,8 +125,14 @@ th, td {
     border-right: 0;
 }
 
-#nav_bar_space {
+#cover_table_hack {
+    position: absolute;
+    top: 80px;
+    height: 8px;
     z-index: 100;
+    width: 100%;
+    background-color: #fafafa;
+    display: block;
 }
 
 body {
