--- a/caas-web/src/main/resources/public/css/page.css
+++ b/caas-web/src/main/resources/public/css/page.css
@@ -4,8 +4,6 @@
 }
 
 body, #content {
-    margin-top: 0px;
-    text-align: center;
     color: rgba(0, 0, 0, 0.87);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     font-size: 13pt;
@@ -157,7 +155,7 @@ footer {
 }
 
 #nav_bar {
-    position: fixed;
+    position: absolute;
     top: 0px;
     right: 0px;
     left: 0px;
