--- a/caas-web/src/main/resources/public/css/page.css
+++ b/caas-web/src/main/resources/public/css/page.css
@@ -89,6 +89,27 @@ li {
     margin: 10px;
 }
 
+.chip.result {
+    box-sizing: border-box;
+    width: 17%;
+    margin: 5px 1%;
+    vertical-align: middle;
+}
+
+.result > img {
+    display: block;
+    width: 36px;
+    height: 36px;
+}
+
+.results_container {
+    margin-left: 3%;
+    width: 95%;
+    text-align: left;
+    padding: 20px auto;
+}
+
+
 .chip.clickable {
     cursor: pointer;
 }
@@ -97,13 +118,6 @@ li {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
 }
 
-.chip.failed::after {
-    content: url('/img/failed.svg');
-}
-
-.chip.passed:after {
-    content: url('/img/passed.svg');
-}
 
 td.passed {
     background-color: #43a047;
@@ -202,14 +216,6 @@ footer {
     transition: all 0.3s;
 }
 
-@media only screen and (max-width: 600px) {
-    #brand_img {
-        margin-right: 0;
-    }
-    #brand_name {
-        display: none;
-    }
-}
 #nav_list_menu {
     float: right;
     display: -webkit-box;
@@ -277,8 +283,29 @@ footer {
     transform: translate(-10px, 0px) rotate(-45deg) translate(0px, 28px);
 }
 
+.loading_status, .loading_status > * {
+    font-size: 1.3em;
+    display: inline;
+    line-height: 70px;
+    vertical-align: middle;
+}
+
+.loader {
+    border: 9px solid #f3f3f3;
+    border-top: 9px solid #43a047;
+    border-radius: 50%;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+}
+
 @media only screen and (max-width: 950px) {
 
+    .chip.result {
+        margin: 7px 2%;
+        width: 28%;
+    }
     #nav_list_menu {
         display: block;
         visibility: hidden;
@@ -333,21 +360,25 @@ footer {
     }
 }
 
-.loading_status, .loading_status > * {
-    font-size: 1.3em;
-    display: inline;
-    line-height: 70px;
-    vertical-align: middle;
+@media only screen and (max-width: 600px) {
+
+    .chip.result {
+        width: 45%;
+        margin: 10px 1%;
+    }
+
+    #brand_img {
+        margin-right: 0;
+    }
+    #brand_name {
+        display: none;
+    }
 }
 
-.loader {
-    border: 9px solid #f3f3f3;
-    border-top: 9px solid #43a047;
-    border-radius: 50%;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    animation: spin 2s linear infinite;
+@media only screen and (max-width: 450px) {
+    .chip.result {
+        width: 95%;
+    }
 }
 
 @keyframes spin {
