Cleaned up notes in add page

--- a/caas-web/src/main/resources/public/css/add.css
+++ b/caas-web/src/main/resources/public/css/add.css
@@ -18,6 +18,12 @@
     width: 340px;
 }
 
+.note {
+    font-size: 0.8em;
+    max-width: 900px;
+    margin: 40px auto auto;
+}
+
 #button_add {
     width: 150px;
     border-radius: 101px;
