--- a/caas-web/src/main/resources/public/css/page.css
+++ b/caas-web/src/main/resources/public/css/page.css
@@ -29,6 +29,7 @@ body, #content {
 input {
     font-size: 0.9em;
     background: none;
+    color: black;
     text-decoration: none;
     outline: none !important;
     border: none;
