--- a/caas-web/src/main/resources/public/css/search_bar.css
+++ b/caas-web/src/main/resources/public/css/search_bar.css
@@ -1,12 +1,12 @@
  #search_suggestion_box {
     max-width: 400px;
     margin:0 auto;
-    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    text-align: left;
 }
 #search_field {
     display: inline;
     box-sizing: border-box;
-    padding: 5px;
     font-size: 1.2em;
     border: none;
     margin-bottom: 0;
@@ -18,7 +18,6 @@
     box-sizing: border-box;
     position: absolute;
     float: right;
-    margin-left: 5px;
     display: inline;
     height: 45px;
     line-height: 45px;
@@ -31,18 +30,37 @@
     border: none;
     cursor: pointer;
     text-align: center;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 10px;
+    padding: 0 10px;
+    border-radius: 0px 10px 10px 0px;
 }
+
 .suggestion_item {
     text-align: left;
     box-sizing: border-box;
     width: 100%;
     padding: 5px;
     cursor: pointer;
+    border-top: 2px solid #dadada;
     margin: 0;
 }
 .suggestion_item:hover {
     background: rgb(200,200,200)
 }
+
+ @media only screen and (max-width: 500px) {
+     #search_suggestion_box {
+         width: 220px;
+     }
+     #search_field {
+         width: 220px;
+     }
+ }
+
+ @media only screen and (max-width: 350px) {
+      #search_suggestion_box {
+         width: 160px;
+     }
+     #search_field {
+         width: 160px;
+     }
+ }
